--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
+    "@nestjs/class-validator": "^0.13.1",
     "@nestjs/common": "^10.0.5",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.5",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.5",
+    "@nestjs/typeorm": "^10.0.0",
     "linebot": "^1.6.1",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
