--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,14 @@ ETHEREAL_USER = 'YOUR_ETHEREAL_USER_NAME'
 ETHEREAL_PASS = 'YOUR_ETHEREAL_PASSWORD'
 JWT_SECRET = 'JWT_SECRET_CODE'
 
+
+LINE_CHANNEL_ACCESS_TOKEN = 'YOUR_LINE_CHANNEL_ACCESS_TOKEN'
+LINE_CHANNEL_SECRET = 'YOUR_LINE_CHANNEL_SECRET'
+LINE_BROADCAST_URL = 'YOUR_LINE_BROADCAST_URL'
+LINE_API_URL = 'YOUR_LINE_API_URL'
+
+LINKSTAFF_URL = 'LINKSTAFF_URL'
+
 DB_HOST='HOST_NAME'     //localhost, //host.docker.internal
 DB_PORT='PORT'          //3306
 DB_USER='USER_NAME'     //root
